# telegram_django_bot

./: README.md  pyproject.toml
backend/base/: admin.py  models.py  views.py
backend/base/migrations/: 0001_initial.py  0002_word_delete_words.py  0004_alter_words_gender.py  0005_word_delete_words.py
backend/config/: urls.py
bot/base/: admin.py  models.py  views.py
bot/base/migrations/: 0003_rename_word_words.py
bot/config/: asgi.py  settings.py  urls.py  wsgi.py
bot/src/: main.py
bot/src/bot_app/: __init__.py  app.py  commands.py  data_fetcher.py  keyboards.py  messages.py  one_by_one.py  random_ten.py
