[tool.poetry]
name = "telegram-django-bot"
version = "0.1.0"
description = ""
authors = ["ssssplassssh <igorrosolovskij2016@gmail.com>"]
readme = "README.md"
packages = [{include = "telegram_django_bot"}]

[tool.poetry.dependencies]
python = "^3.11"
django = "^4.2.2"
psycopg2 = "^2.9.6"
djangorestframework = "^3.14.0"
aiogram = "^2.25.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
